adding container in items.html

--- a/frontend/items.html
+++ b/frontend/items.html
@@ -14,6 +14,18 @@
     <a href="news.html">News</a>
   </nav>
   <!-- fuck I think I deleted a container, god help me-->
+  <h1>Items</h1>
+  <p id="itemCount">Total items: 0</p>
+  <input id="search" type="text" placeholder="Search items..." />
+  
+  <ul id="itemList"></ul>
+  
+  <form id="itemForm">
+    <input id="name" type="text" placeholder="Item name" required />
+    <input id="description" type="text" placeholder="Description" required />
+    <button type="submit">Add Item</button>
+  </form>
+  
 
   <script src="scripts/items.js"></script>
 </body>
