--- a/frontend/analytics.html
+++ b/frontend/analytics.html
@@ -27,6 +27,6 @@
     <img id="plot" src="" alt="Analytics Plot" style="max-width: 100%;" />
   </div>
 
-  <script src="scripts/analytics.js"></script>
+  <script src="data:image/png;base64,{{plot_image_base64}}"></script>
 </body>
 </html>
